--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
+
+/* ========= RESET ========= */
 *{
   margin:0;
   padding:0;
@@ -15,6 +17,7 @@
   font-family:"Inter",sans-serif;
 }
 
+/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
@@ -22,7 +25,7 @@ body{
   scroll-snap-type:y mandatory;
 }
 
-/* NAV */
+/* ========= NAV ========= */
 nav{
   position:fixed;
   top:0;
@@ -47,7 +50,7 @@ nav span{
   cursor:pointer;
 }
 
-/* SECTIONS */
+/* ========= SECTIONS ========= */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
@@ -56,13 +59,14 @@ nav span{
   padding:180px 10vw 160px 22vw;
 }
 
+/* ========= SECTION BLOCK ========= */
 .section-block{
   position:sticky;
   top:260px;
   max-width:1100px;
 }
 
-/* HERO */
+/* ========= HERO (NO TOCAR) ========= */
 .section.hero{
   align-items:center;
 }
@@ -70,26 +74,31 @@ nav span{
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
+  text-align:left;
   margin-left:-4px;
 }
 
-.hero-surname{ white-space:nowrap; }
+.hero-surname{
+  white-space:nowrap;
+}
 
 .hero-sub{
   margin-top:24px;
   padding-left:8px;
+  text-align:left;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-/* TYPO */
+/* ========= TYPO ========= */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
+  line-height:1.05;
 }
 
-/* TEXT */
+/* ========= TEXT ========= */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
@@ -100,14 +109,16 @@ h1{
   text-align:justify;
 }
 
-/* ABOUT */
+/* ========= ABOUT (NO TOCAR) ========= */
 .about{
   display:flex;
   align-items:flex-start;
   margin-top:12px;
 }
 
-.about p{ max-width:700px; }
+.about p{
+  max-width:700px;
+}
 
 .about img{
   width:300px;
@@ -119,7 +130,7 @@ h1{
   opacity:.9;
 }
 
-/* PORTFOLIO */
+/* ========= PORTFOLIO ========= */
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
@@ -127,6 +138,7 @@ h1{
   padding-right:120px;
 }
 
+/* Gradiente indicador */
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
@@ -134,8 +146,12 @@ h1{
   right:0;
   width:120px;
   height:100%;
-  background:linear-gradient(to right, transparent, #0a0a0a);
   pointer-events:none;
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
 }
 
 .portfolio-carousel{
@@ -143,32 +159,44 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
-  padding-left:12px;
-  padding-right:12px;   /* ⬅ cierre del carrusel */
-  margin-left:-12px;
   scroll-behavior:smooth;
 
+  /* Firefox */
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
 
+/* Scrollbar WebKit (Chrome, Safari, Edge) */
 .portfolio-carousel::-webkit-scrollbar{
   height:6px;
 }
 
+.portfolio-carousel::-webkit-scrollbar-track{
+  background:transparent;
+}
+
 .portfolio-carousel::-webkit-scrollbar-thumb{
-  background:#444;
+  background-color:#444;
   border-radius:6px;
 }
 
-/* PROJECT */
+.portfolio-carousel::-webkit-scrollbar-thumb:hover{
+  background-color:#666;
+}
+
+/* Proyecto */
 .project-card{
   min-width:460px;
+  flex-shrink:0;
   text-decoration:none;
   color:inherit;
+  cursor:pointer;
+
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:
+    opacity .8s ease,
+    transform .8s ease;
 }
 
 .project-card.is-visible{
@@ -176,6 +204,11 @@ h1{
   transform:translateY(0);
 }
 
+.project-card:hover{
+  transform:translateY(-4px);
+}
+
+/* Imagen */
 .project-image{
   width:92%;
   height:260px;
@@ -188,99 +221,170 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
-  filter:grayscale(100%);
-  transition:.4s;
+  display:block;
+  filter:grayscale(100%) contrast(1);
+  transition:filter .4s ease;
 }
 
-.project-card:hover img{ filter:grayscale(0%); }
-
-.project-card h2,
-.project-card span,
-.project-card p{
-  padding-left:16px;
+.project-card:hover .project-image img{
+  filter:grayscale(0%) contrast(1.1);
 }
 
+/* Texto */
 .project-card h2{
   font-size:28px;
   font-weight:400;
+  color:#f0f0f0;
 }
 
 .project-card span{
+  display:block;
+  margin-top:6px;
   font-size:12px;
   letter-spacing:.18em;
   color:#777;
+  text-transform:uppercase;
 }
 
 .project-card p{
   margin-top:12px;
   max-width:360px;
 }
+
+/* ========= FOOTER ========= */
+.footer-wrapper{
+  flex:1;
+  display:flex;
+  align-items:flex-end;
+  justify-content:flex-start;
+  padding:0 0 20px 22vw;
+}
+
+.footer{
+  font-size:11px;
+  letter-spacing:.18em;
+  color:#cfcfcf;
+}
+
 </style>
 </head>
-
 <body>
 
 <nav>
   <span data-i="0">Inicio</span>
   <span data-i="1">Sobre mí</span>
   <span data-i="2">Portfolio</span>
+  <span data-i="3">CV</span>
+  <span data-i="4">Contacto</span>
 </nav>
 
+<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
-    <h1>Luis<br><span class="hero-surname">Blasco-Ibáñez</span><br>Berbel</h1>
+    <h1>
+      Luis<br>
+      <span class="hero-surname">Blasco-Ibáñez</span><br>
+      Berbel
+    </h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
 
+<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
-      <p>Ingeniero en diseño industrial de 24 años, con base en Valencia...</p>
-      <img src="foto.jpg">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+      </p>
+      <img src="foto.jpg" alt="Foto personal">
     </div>
   </div>
 </section>
 
+<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <div class="project-card">
-          <div class="project-image"><img src="brazo1.jpg"></div>
+
+        <a href="node.html" class="project-card">
+          <div class="project-image">
+            <img src="brazo1.jpg" alt="Proyecto NODE">
+          </div>
           <h2>NODE</h2>
           <span>Proyecto final de grado</span>
           <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
-        </div>
-        <div class="project-card">
-          <div class="project-image"><img src="reloj1.jpg"></div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image">
+            <img src="reloj1.jpg" alt="Cómoda Sixay">
+          </div>
           <h2>Sixay · Cómoda</h2>
           <span>Diseño de mobiliario</span>
           <p>Desarrollo completo de una cómoda a medida.</p>
-        </div>
-        <div class="project-card">
-          <div class="project-image"><img src="secador2.jpg"></div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image">
+            <img src="secador2.jpg" alt="Exploración material">
+          </div>
           <h2>Exploración material</h2>
           <span>Proyecto experimental</span>
           <p>Investigación formal y constructiva.</p>
-        </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
+          <h2>Proyecto conceptual</h2>
+          <span>Diseño de producto</span>
+          <p>Propuesta centrada en el análisis del uso.</p>
+        </a>
+
       </div>
     </div>
   </div>
 </section>
 
 <script>
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
+document.querySelectorAll("nav span").forEach((btn,i)=>{
+  btn.addEventListener("click",()=>{
+    document.querySelectorAll(".section")[i]
+      .scrollIntoView({behavior:"smooth"});
+  });
 });
 
-const obs=new IntersectionObserver(e=>{
-  e.forEach(x=>x.isIntersecting&&x.target.classList.add("is-visible"));
-},{threshold:.3});
+const carousel = document.querySelector(".portfolio-carousel");
+carousel.addEventListener("wheel",(e)=>{
+  e.preventDefault();
+  carousel.scrollLeft += e.deltaY;
+},{ passive:false });
 
-document.querySelectorAll(".project-card").forEach(c=>obs.observe(c));
+const cards = document.querySelectorAll(".project-card");
+const observer = new IntersectionObserver((entries)=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("is-visible");
+    }
+  });
+},{
+  root: carousel,
+  threshold: 0.3
+});
+
+cards.forEach(card=>observer.observe(card));
 </script>
 
 </body>
