--- a/index.html
+++ b/index.html
@@ -161,27 +161,17 @@ h1{
   padding-bottom:20px;
   scroll-behavior:smooth;
 
-  /* Firefox */
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
 
-/* Scrollbar WebKit (Chrome, Safari, Edge) */
 .portfolio-carousel::-webkit-scrollbar{
   height:6px;
 }
 
-.portfolio-carousel::-webkit-scrollbar-track{
-  background:transparent;
-}
-
 .portfolio-carousel::-webkit-scrollbar-thumb{
-  background-color:#444;
+  background:#444;
   border-radius:6px;
-}
-
-.portfolio-carousel::-webkit-scrollbar-thumb:hover{
-  background-color:#666;
 }
 
 /* Proyecto */
@@ -208,11 +198,11 @@ h1{
   transform:translateY(-4px);
 }
 
-/* Imagen */
+/* Imagen desplazada hacia abajo */
 .project-image{
   width:92%;
   height:260px;
-  margin:0 auto 16px auto;
+  margin:40px auto 16px auto; /* ⬅ desplazamiento vertical */
   background:#1a1a1a;
   overflow:hidden;
 }
@@ -320,36 +310,36 @@ h1{
       <div class="portfolio-carousel">
 
         <a href="node.html" class="project-card">
+          <h2>NODE</h2>
+          <span>Proyecto final de grado</span>
           <div class="project-image">
             <img src="brazo1.jpg" alt="Proyecto NODE">
           </div>
-          <h2>NODE</h2>
-          <span>Proyecto final de grado</span>
           <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
         </a>
 
         <a href="sixay.html" class="project-card">
+          <h2>Sixay · Cómoda</h2>
+          <span>Diseño de mobiliario</span>
           <div class="project-image">
             <img src="reloj1.jpg" alt="Cómoda Sixay">
           </div>
-          <h2>Sixay · Cómoda</h2>
-          <span>Diseño de mobiliario</span>
           <p>Desarrollo completo de una cómoda a medida.</p>
         </a>
 
         <a href="exploracion.html" class="project-card">
+          <h2>Exploración material</h2>
+          <span>Proyecto experimental</span>
           <div class="project-image">
             <img src="secador2.jpg" alt="Exploración material">
           </div>
-          <h2>Exploración material</h2>
-          <span>Proyecto experimental</span>
           <p>Investigación formal y constructiva.</p>
         </a>
 
         <a href="conceptual.html" class="project-card">
-          <div class="project-image"></div>
           <h2>Proyecto conceptual</h2>
           <span>Diseño de producto</span>
+          <div class="project-image"></div>
           <p>Propuesta centrada en el análisis del uso.</p>
         </a>
 
