--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@ h1{
   transform:translateY(-4px);
 }
 
-/* Imagen desplazada hacia abajo */
+/* Imagen */
 .project-image{
   width:92%;
   height:260px;
-  margin:40px auto 16px auto; /* ⬅ desplazamiento vertical */
+  margin:0 auto 20px auto;
   background:#1a1a1a;
   overflow:hidden;
 }
@@ -310,36 +310,36 @@ h1{
       <div class="portfolio-carousel">
 
         <a href="node.html" class="project-card">
-          <h2>NODE</h2>
-          <span>Proyecto final de grado</span>
           <div class="project-image">
             <img src="brazo1.jpg" alt="Proyecto NODE">
           </div>
+          <h2>NODE</h2>
+          <span>Proyecto final de grado</span>
           <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
         </a>
 
         <a href="sixay.html" class="project-card">
-          <h2>Sixay · Cómoda</h2>
-          <span>Diseño de mobiliario</span>
           <div class="project-image">
             <img src="reloj1.jpg" alt="Cómoda Sixay">
           </div>
+          <h2>Sixay · Cómoda</h2>
+          <span>Diseño de mobiliario</span>
           <p>Desarrollo completo de una cómoda a medida.</p>
         </a>
 
         <a href="exploracion.html" class="project-card">
-          <h2>Exploración material</h2>
-          <span>Proyecto experimental</span>
           <div class="project-image">
             <img src="secador2.jpg" alt="Exploración material">
           </div>
+          <h2>Exploración material</h2>
+          <span>Proyecto experimental</span>
           <p>Investigación formal y constructiva.</p>
         </a>
 
         <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
           <h2>Proyecto conceptual</h2>
           <span>Diseño de producto</span>
-          <div class="project-image"></div>
           <p>Propuesta centrada en el análisis del uso.</p>
         </a>
 
