--- a/index.html
+++ b/index.html
@@ -198,11 +198,16 @@ h1{
   transform:translateY(-4px);
 }
 
+/* CONTENEDOR INTERNO ALINEADO */
+.project-inner{
+  width:92%;
+  margin:0 auto;
+}
+
 /* Imagen */
 .project-image{
-  width:92%;
   height:260px;
-  margin:0 auto 20px auto;
+  margin-bottom:20px;
   background:#1a1a1a;
   overflow:hidden;
 }
@@ -221,13 +226,13 @@ h1{
 }
 
 /* Texto */
-.project-card h2{
+.project-inner h2{
   font-size:28px;
   font-weight:400;
   color:#f0f0f0;
 }
 
-.project-card span{
+.project-inner span{
   display:block;
   margin-top:6px;
   font-size:12px;
@@ -236,7 +241,7 @@ h1{
   text-transform:uppercase;
 }
 
-.project-card p{
+.project-inner p{
   margin-top:12px;
   max-width:360px;
 }
@@ -310,37 +315,45 @@ h1{
       <div class="portfolio-carousel">
 
         <a href="node.html" class="project-card">
-          <div class="project-image">
-            <img src="brazo1.jpg" alt="Proyecto NODE">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="brazo1.jpg" alt="Proyecto NODE">
+            </div>
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+            <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
           </div>
-          <h2>NODE</h2>
-          <span>Proyecto final de grado</span>
-          <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
         </a>
 
         <a href="sixay.html" class="project-card">
-          <div class="project-image">
-            <img src="reloj1.jpg" alt="Cómoda Sixay">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="reloj1.jpg" alt="Cómoda Sixay">
+            </div>
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+            <p>Desarrollo completo de una cómoda a medida.</p>
           </div>
-          <h2>Sixay · Cómoda</h2>
-          <span>Diseño de mobiliario</span>
-          <p>Desarrollo completo de una cómoda a medida.</p>
         </a>
 
         <a href="exploracion.html" class="project-card">
-          <div class="project-image">
-            <img src="secador2.jpg" alt="Exploración material">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="secador2.jpg" alt="Exploración material">
+            </div>
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+            <p>Investigación formal y constructiva.</p>
           </div>
-          <h2>Exploración material</h2>
-          <span>Proyecto experimental</span>
-          <p>Investigación formal y constructiva.</p>
         </a>
 
         <a href="conceptual.html" class="project-card">
-          <div class="project-image"></div>
-          <h2>Proyecto conceptual</h2>
-          <span>Diseño de producto</span>
-          <p>Propuesta centrada en el análisis del uso.</p>
+          <div class="project-inner">
+            <div class="project-image"></div>
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+            <p>Propuesta centrada en el análisis del uso.</p>
+          </div>
         </a>
 
       </div>
