--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ h1{
             </div>
             <h2>NODE</h2>
             <span>Proyecto final de grado</span>
-            <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
+            <p>Sistema modular de mobiliario desarrollado a partir del análisis del espacio, el uso y la configuración variable.</p>
           </div>
         </a>
 
@@ -332,7 +332,7 @@ h1{
             </div>
             <h2>Sixay · Cómoda</h2>
             <span>Diseño de mobiliario</span>
-            <p>Desarrollo completo de una cómoda a medida.</p>
+            <p>Desarrollo de una cómoda a medida, abordando definición formal, resolución constructiva y criterios de fabricación.</p>
           </div>
         </a>
 
@@ -343,7 +343,7 @@ h1{
             </div>
             <h2>Exploración material</h2>
             <span>Proyecto experimental</span>
-            <p>Investigación formal y constructiva.</p>
+            <p>Investigación formal y constructiva a través de la experimentación con materiales y procesos productivos.</p>
           </div>
         </a>
 
@@ -352,7 +352,7 @@ h1{
             <div class="project-image"></div>
             <h2>Proyecto conceptual</h2>
             <span>Diseño de producto</span>
-            <p>Propuesta centrada en el análisis del uso.</p>
+            <p>Propuesta conceptual desarrollada a partir del análisis del uso, el contexto y la relación usuario–objeto.</p>
           </div>
         </a>
 
