--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ h1{
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
-  margin-left:24px; /* DESPLAZAMIENTO DEL CARRUSEL A LA DERECHA */
+  margin-left:8px; /* DESPLAZAMIENTO DEL CARRUSEL */
   overflow:hidden;
   padding-right:120px;
 }
