--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ h1{
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
-  margin-left:8px; /* DESPLAZAMIENTO DEL CARRUSEL */
+  margin-left:8px;
   overflow:hidden;
   padding-right:120px;
 }
@@ -288,9 +288,15 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico, flexible y
-        adaptable, situado entre lo técnico y lo conceptual. Disfruto del proceso completo de diseño,
-        desde el análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
