--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@ h1{
   margin-top:16px;
   margin-left:40px;
   object-fit:cover;
-  filter:grayscale(100%) contrast(1.05);
   opacity:.9;
 }
 
@@ -216,12 +215,11 @@ h1{
   height:100%;
   object-fit:cover;
   display:block;
-  filter:grayscale(100%) contrast(1);
-  transition:filter .4s ease;
+  transition:transform .4s ease;
 }
 
 .project-card:hover .project-image img{
-  filter:grayscale(0%) contrast(1.1);
+  transform:scale(1.03);
 }
 
 /* Texto */
