--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ h1{
 .cv-wrapper{
   margin-top:32px;
   display:grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns:1fr 1fr;
   gap:80px;
 }
 
@@ -227,18 +227,17 @@ h1{
   font-weight:500;
   letter-spacing:.12em;
   text-transform:uppercase;
-  color:#f0f0f0;
+  margin-bottom:20px;
 }
 
 .cv-item{
-  margin-top:20px;
+  margin-bottom:24px;
 }
 
 .cv-item strong{
   display:block;
   font-size:15px;
   font-weight:500;
-  color:#f5f5f5;
 }
 
 .cv-item span{
@@ -303,7 +302,7 @@ h1{
         ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
         ambas dimensiones del diseño.
       </p>
-      <img src="foto.jpg">
+      <img src="foto.jpg" alt="Foto personal">
     </div>
   </div>
 </section>
@@ -311,9 +310,48 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <!-- proyectos -->
+
+        <a href="node.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="brazo1.jpg" alt="Proyecto NODE">
+            </div>
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="reloj1.jpg" alt="Cómoda Sixay">
+            </div>
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="secador2.jpg" alt="Exploración material">
+            </div>
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image"></div>
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
@@ -354,6 +392,7 @@ h1{
           <span>Universidad / Prácticas</span>
           <p>Proceso completo desde análisis hasta prototipado.</p>
         </div>
+
       </div>
 
     </div>
@@ -367,6 +406,24 @@ document.querySelectorAll("nav span").forEach((btn,i)=>{
       .scrollIntoView({behavior:"smooth"});
   });
 });
+
+const carousel = document.querySelector(".portfolio-carousel");
+const cards = document.querySelectorAll(".project-card");
+
+const observer = new IntersectionObserver((entries)=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("is-visible");
+    }else{
+      entry.target.classList.remove("is-visible");
+    }
+  });
+},{
+  root: carousel,
+  threshold:0.3
+});
+
+cards.forEach(card=>observer.observe(card));
 </script>
 
 </body>
