--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@ h1{
 
 </style>
 </head>
+
 <body>
 
 <nav>
@@ -300,7 +301,11 @@ h1{
         enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
         a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
         ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño.
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
@@ -357,7 +362,6 @@ h1{
   </div>
 </section>
 
-<!-- ========= CV SECTION ========= -->
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
